--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My Website</title>
+    <title>সিম্পল ওয়েবসাইট</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>আমার সিম্পল ওয়েবসাইট</h1>
     </header>
     
     <main>
-        <p>এই ওয়েবসাইটটি GitHub Pages দিয়ে হোস্ট করা হয়েছে।</p>
-        <button id="clickMe">Click Me</button>
+        <section class="content">
+            <h2>স্বাগতম!</h2>
+            <p>এটি একটি সিম্পল ওয়েবসাইটের উদাহরণ, যেখানে HTML & CSS ব্যবহার করা হয়েছে।</p>
+            <a href="#" class="btn">আরো জানুন</a>
+        </section>
     </main>
-
+    
     <footer>
-        <p>&copy; 2025 Rifat. All rights reserved.</p>
+        <p>&copy; 2025 - আমার ওয়েবসাইট</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
